# cradles-of-civilization

./: README.md  balance-model.js  desktop.js  ending.html  endings.js  game.js  index.html  package-lock.json  package.json  styles.css
.github/workflows/: windows-desktop.yml
scripts/: build-desktop-ui.mjs  package-game.mjs  simulate-balance.mjs  simulate-core-model.mjs  test-engine.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  lib.rs  main.rs
